--- a/.gitignore
+++ b/.gitignore
@@ -29373,3 +29373,111 @@ src/01-language/12-tuples/01-simple-tuple/bin/Debug/net7.0/01.simple.tuple.dll
 src/01-language/12-tuples/01-simple-tuple/bin/Debug/net7.0/01.simple.tuple.pdb
 src/01-language/17-linq/02-linq-samples/bin/Debug/net7.0/02.linq.samples.dll
 src/01-language/17-linq/02-linq-samples/bin/Debug/net7.0/02.linq.samples.pdb
+src/.vs/DotnetSamples/v17/TestStore/0/000.testlog
+src/.vs/DotnetSamples/v17/TestStore/0/testlog.manifest
+src/.vs/ProjectEvaluation/dotnetsamples.metadata.v7.bin
+src/.vs/ProjectEvaluation/dotnetsamples.projects.v7.bin
+src/01-language/01-functions/03-ref-params/bin/Debug/net7.0/03.ref.params.dll
+src/01-language/01-functions/03-ref-params/bin/Debug/net7.0/03.ref.params.exe
+src/01-language/01-functions/03-ref-params/bin/Debug/net7.0/03.ref.params.pdb
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.AssemblyInfo.cs
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.AssemblyInfoInputs.cache
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.assets.cache
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.csproj.CoreCompileInputs.cache
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.csproj.FileListAbsolute.txt
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.dll
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.GeneratedMSBuildEditorConfig.editorconfig
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.genruntimeconfig.cache
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.pdb
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.sourcelink.json
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/apphost.exe
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/ref/03.ref.params.dll
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/refint/03.ref.params.dll
+src/01-language/01-functions/07-extension-methods/bin/Debug/net7.0/07.extension.methods.dll
+src/01-language/01-functions/07-extension-methods/bin/Debug/net7.0/07.extension.methods.exe
+src/01-language/01-functions/07-extension-methods/bin/Debug/net7.0/07.extension.methods.pdb
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.AssemblyInfo.cs
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.AssemblyInfoInputs.cache
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.assets.cache
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.csproj.CoreCompileInputs.cache
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.csproj.FileListAbsolute.txt
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.dll
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.GeneratedMSBuildEditorConfig.editorconfig
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.genruntimeconfig.cache
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.pdb
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.sourcelink.json
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/apphost.exe
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/ref/07.extension.methods.dll
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/refint/07.extension.methods.dll
+src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.AssemblyInfo.cs
+src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.AssemblyInfoInputs.cache
+src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.assets.cache
+src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.GeneratedMSBuildEditorConfig.editorconfig
+src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/apphost.exe
+src/01-language/02-classes/07-override/bin/Debug/net7.0/07.method.override.dll
+src/01-language/02-classes/07-override/bin/Debug/net7.0/07.method.override.exe
+src/01-language/02-classes/07-override/bin/Debug/net7.0/07.method.override.pdb
+src/01-language/02-classes/08-hide/bin/Debug/net7.0/08.method.new.hide.dll
+src/01-language/02-classes/08-hide/bin/Debug/net7.0/08.method.new.hide.exe
+src/01-language/02-classes/08-hide/bin/Debug/net7.0/08.method.new.hide.pdb
+src/01-language/02-classes/09-partial-class/bin/Debug/net7.0/09.partial.class.dll
+src/01-language/02-classes/09-partial-class/bin/Debug/net7.0/09.partial.class.exe
+src/01-language/02-classes/09-partial-class/bin/Debug/net7.0/09.partial.class.pdb
+src/01-language/03-interfaces/01-implements/bin/Debug/net7.0/01.implements.dll
+src/01-language/03-interfaces/01-implements/bin/Debug/net7.0/01.implements.exe
+src/01-language/03-interfaces/01-implements/bin/Debug/net7.0/01.implements.pdb
+src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplements.explicit.dll
+src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplements.explicit.exe
+src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplements.explicit.pdb
+src/.vs/ProjectEvaluation/dotnetsamples.metadata.v7.bin
+src/.vs/ProjectEvaluation/dotnetsamples.projects.v7.bin
+src/01-language/01-functions/03-ref-params/bin/Debug/net7.0/03.ref.params.dll
+src/01-language/01-functions/03-ref-params/bin/Debug/net7.0/03.ref.params.exe
+src/01-language/01-functions/03-ref-params/bin/Debug/net7.0/03.ref.params.pdb
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.AssemblyInfo.cs
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.AssemblyInfoInputs.cache
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.assets.cache
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.csproj.CoreCompileInputs.cache
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.csproj.FileListAbsolute.txt
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.dll
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.GeneratedMSBuildEditorConfig.editorconfig
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.genruntimeconfig.cache
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.pdb
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/apphost.exe
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/ref/03.ref.params.dll
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/refint/03.ref.params.dll
+src/01-language/01-functions/07-extension-methods/bin/Debug/net7.0/07.extension.methods.dll
+src/01-language/01-functions/07-extension-methods/bin/Debug/net7.0/07.extension.methods.exe
+src/01-language/01-functions/07-extension-methods/bin/Debug/net7.0/07.extension.methods.pdb
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.AssemblyInfo.cs
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.AssemblyInfoInputs.cache
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.assets.cache
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.csproj.CoreCompileInputs.cache
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.csproj.FileListAbsolute.txt
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.dll
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.GeneratedMSBuildEditorConfig.editorconfig
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.genruntimeconfig.cache
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.pdb
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/apphost.exe
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/ref/07.extension.methods.dll
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/refint/07.extension.methods.dll
+src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.AssemblyInfo.cs
+src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.AssemblyInfoInputs.cache
+src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.assets.cache
+src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.GeneratedMSBuildEditorConfig.editorconfig
+src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/apphost.exe
+src/01-language/02-classes/07-override/bin/Debug/net7.0/07.method.override.dll
+src/01-language/02-classes/07-override/bin/Debug/net7.0/07.method.override.exe
+src/01-language/02-classes/07-override/bin/Debug/net7.0/07.method.override.pdb
+src/01-language/02-classes/08-hide/bin/Debug/net7.0/08.method.new.hide.dll
+src/01-language/02-classes/08-hide/bin/Debug/net7.0/08.method.new.hide.exe
+src/01-language/02-classes/08-hide/bin/Debug/net7.0/08.method.new.hide.pdb
+src/01-language/02-classes/09-partial-class/bin/Debug/net7.0/09.partial.class.dll
+src/01-language/02-classes/09-partial-class/bin/Debug/net7.0/09.partial.class.exe
+src/01-language/02-classes/09-partial-class/bin/Debug/net7.0/09.partial.class.pdb
+src/01-language/03-interfaces/01-implements/bin/Debug/net7.0/01.implements.dll
+src/01-language/03-interfaces/01-implements/bin/Debug/net7.0/01.implements.exe
+src/01-language/03-interfaces/01-implements/bin/Debug/net7.0/01.implements.pdb
+src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplements.explicit.dll
+src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplements.explicit.exe
+src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplements.explicit.pdb
