--- a/.gitignore
+++ b/.gitignore
@@ -29481,3 +29481,26 @@ src/01-language/03-interfaces/01-implements/bin/Debug/net7.0/01.implements.pdb
 src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplements.explicit.dll
 src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplements.explicit.exe
 src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplements.explicit.pdb
+/src/.vs/ProjectEvaluation/dotnetsamples.metadata.v7.bin
+/src/.vs/ProjectEvaluation/dotnetsamples.projects.v7.bin
+/src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.AssemblyInfoInputs.cache
+/src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.assets.cache
+/src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.AssemblyInfoInputs.cache
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.assets.cache
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.AssemblyInfoInputs.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.assets.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.GeneratedMSBuildEditorConfig.editorconfig
+/src/01-language/04-properties/03-property-hide-base-class/bin/Debug/net7.0/03.prpoperty.hiding.dll
+/src/01-language/04-properties/03-property-hide-base-class/bin/Debug/net7.0/03.prpoperty.hiding.exe
+/src/01-language/04-properties/03-property-hide-base-class/bin/Debug/net7.0/03.prpoperty.hiding.pdb
+/src/01-language/04-properties/04-property-abstract/bin/Debug/net7.0/04.property.abstract.dll
+/src/01-language/04-properties/04-property-abstract/bin/Debug/net7.0/04.property.abstract.exe
+/src/01-language/04-properties/04-property-abstract/bin/Debug/net7.0/04.property.abstract.pdb
+/src/01-language/05-enums/02-conversion-enum/bin/Debug/net7.0/02.conversion.enum.dll
+/src/01-language/05-enums/02-conversion-enum/bin/Debug/net7.0/02.conversion.enum.exe
+/src/01-language/05-enums/02-conversion-enum/bin/Debug/net7.0/02.conversion.enum.pdb
+/src/01-language/06-generics/00-simple-generics/bin/Debug/net7.0/00.simple.generic.dll
+/src/01-language/06-generics/00-simple-generics/bin/Debug/net7.0/00.simple.generic.exe
+/src/01-language/06-generics/00-simple-generics/bin/Debug/net7.0/00.simple.generic.pdb
