--- a/src/01-language/08-delegates/02-delagates-as-parameters/02.delegates.as.parameters.csproj
+++ b/src/01-language/08-delegates/02-delagates-as-parameters/02.delegates.as.parameters.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\01-simple-delegate\01.simple.delegate.csproj" />
+  </ItemGroup>
+
 </Project>
