--- a/.gitignore
+++ b/.gitignore
@@ -29504,3 +29504,67 @@ src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplemen
 /src/01-language/06-generics/00-simple-generics/bin/Debug/net7.0/00.simple.generic.dll
 /src/01-language/06-generics/00-simple-generics/bin/Debug/net7.0/00.simple.generic.exe
 /src/01-language/06-generics/00-simple-generics/bin/Debug/net7.0/00.simple.generic.pdb
+/src/01-language/06-generics/01-generic-list/bin/Debug/net7.0/01.generic.list.dll
+/src/01-language/06-generics/01-generic-list/bin/Debug/net7.0/01.generic.list.exe
+/src/01-language/06-generics/01-generic-list/bin/Debug/net7.0/01.generic.list.pdb
+/src/01-language/07-indexers/01-simple-inedexer/bin/Debug/net7.0/01.simple.indexer.dll
+/src/01-language/07-indexers/01-simple-inedexer/bin/Debug/net7.0/01.simple.indexer.exe
+/src/01-language/07-indexers/01-simple-inedexer/bin/Debug/net7.0/01.simple.indexer.pdb
+/src/01-language/07-indexers/02-indexer-overload/bin/Debug/net7.0/02.indexer.overload.dll
+/src/01-language/07-indexers/02-indexer-overload/bin/Debug/net7.0/02.indexer.overload.exe
+/src/01-language/07-indexers/02-indexer-overload/bin/Debug/net7.0/02.indexer.overload.pdb
+/src/01-language/08-delegates/01-simple-delegate/bin/Debug/net7.0/01.simple.delegate.dll
+/src/01-language/08-delegates/01-simple-delegate/bin/Debug/net7.0/01.simple.delegate.exe
+/src/01-language/08-delegates/01-simple-delegate/bin/Debug/net7.0/01.simple.delegate.pdb
+/src/01-language/08-delegates/02-delagates-as-parameters/bin/Debug/net7.0/01.simple.delegate.deps.json
+/src/01-language/08-delegates/02-delagates-as-parameters/bin/Debug/net7.0/01.simple.delegate.dll
+/src/01-language/08-delegates/02-delagates-as-parameters/bin/Debug/net7.0/01.simple.delegate.exe
+/src/01-language/08-delegates/02-delagates-as-parameters/bin/Debug/net7.0/01.simple.delegate.pdb
+/src/01-language/08-delegates/02-delagates-as-parameters/bin/Debug/net7.0/01.simple.delegate.runtimeconfig.json
+/src/01-language/08-delegates/02-delagates-as-parameters/bin/Debug/net7.0/02.delegates.as.parameters.deps.json
+/src/01-language/08-delegates/02-delagates-as-parameters/bin/Debug/net7.0/02.delegates.as.parameters.dll
+/src/01-language/08-delegates/02-delagates-as-parameters/bin/Debug/net7.0/02.delegates.as.parameters.exe
+/src/01-language/08-delegates/02-delagates-as-parameters/bin/Debug/net7.0/02.delegates.as.parameters.pdb
+/src/01-language/08-delegates/03-multicast-delgates/bin/Debug/net7.0/03.multicast.delegates.dll
+/src/01-language/08-delegates/03-multicast-delgates/bin/Debug/net7.0/03.multicast.delegates.exe
+/src/01-language/08-delegates/03-multicast-delgates/bin/Debug/net7.0/03.multicast.delegates.pdb
+/src/01-language/08-delegates/05-generic-delegate/bin/Debug/net7.0/05.generic.delegate.dll
+/src/01-language/08-delegates/05-generic-delegate/bin/Debug/net7.0/05.generic.delegate.exe
+/src/01-language/08-delegates/05-generic-delegate/bin/Debug/net7.0/05.generic.delegate.pdb
+/src/01-language/08-delegates/06-func-delegate/bin/Debug/net7.0/06.func.delegate.dll
+/src/01-language/08-delegates/06-func-delegate/bin/Debug/net7.0/06.func.delegate.exe
+/src/01-language/08-delegates/06-func-delegate/bin/Debug/net7.0/06.func.delegate.pdb
+/src/01-language/08-delegates/08-predicate-delegate/bin/Debug/net7.0/08.predicate.delegate.dll
+/src/01-language/08-delegates/08-predicate-delegate/bin/Debug/net7.0/08.predicate.delegate.exe
+/src/01-language/08-delegates/08-predicate-delegate/bin/Debug/net7.0/08.predicate.delegate.pdb
+/src/01-language/09-events/01-simple-event/bin/Debug/net7.0/01.simple.event.dll
+/src/01-language/09-events/01-simple-event/bin/Debug/net7.0/01.simple.event.exe
+/src/01-language/09-events/01-simple-event/bin/Debug/net7.0/01.simple.event.pdb
+/src/01-language/09-events/03-pass-event-data/bin/Debug/net7.0/03.pass.event.data.dll
+/src/01-language/09-events/03-pass-event-data/bin/Debug/net7.0/03.pass.event.data.exe
+/src/01-language/09-events/03-pass-event-data/bin/Debug/net7.0/03.pass.event.data.pdb
+/src/04.sun.cat.owl/bin/Debug/net7.0/04.sun.cat.owl.deps.json
+/src/04.sun.cat.owl/bin/Debug/net7.0/04.sun.cat.owl.dll
+/src/04.sun.cat.owl/bin/Debug/net7.0/04.sun.cat.owl.exe
+/src/04.sun.cat.owl/bin/Debug/net7.0/04.sun.cat.owl.pdb
+/src/04.sun.cat.owl/bin/Debug/net7.0/04.sun.cat.owl.runtimeconfig.json
+/src/04.sun.cat.owl/obj/Debug/net7.0/04.sun.cat.owl.AssemblyInfoInputs.cache
+/src/04.sun.cat.owl/obj/Debug/net7.0/04.sun.cat.owl.assets.cache
+/src/04.sun.cat.owl/obj/Debug/net7.0/04.sun.cat.owl.csproj.BuildWithSkipAnalyzers
+/src/04.sun.cat.owl/obj/Debug/net7.0/04.sun.cat.owl.csproj.CoreCompileInputs.cache
+/src/04.sun.cat.owl/obj/Debug/net7.0/04.sun.cat.owl.csproj.FileListAbsolute.txt
+/src/04.sun.cat.owl/obj/Debug/net7.0/04.sun.cat.owl.dll
+/src/04.sun.cat.owl/obj/Debug/net7.0/04.sun.cat.owl.GeneratedMSBuildEditorConfig.editorconfig
+/src/04.sun.cat.owl/obj/Debug/net7.0/04.sun.cat.owl.genruntimeconfig.cache
+/src/04.sun.cat.owl/obj/Debug/net7.0/ref/04.sun.cat.owl.dll
+/src/04.sun.cat.owl/obj/Debug/net7.0/refint/04.sun.cat.owl.dll
+/src/04.sun.cat.owl/obj/04.sun.cat.owl.csproj.nuget.dgspec.json
+/src/04.sun.cat.owl/obj/04.sun.cat.owl.csproj.nuget.g.props
+/src/04.sun.cat.owl/obj/04.sun.cat.owl.csproj.nuget.g.targets
+/src/04.sun.cat.owl/obj/Debug/net7.0/.NETCoreApp,Version=v7.0.AssemblyAttributes.cs
+/src/04.sun.cat.owl/obj/Debug/net7.0/04.sun.cat.owl.AssemblyInfo.cs
+/src/04.sun.cat.owl/obj/Debug/net7.0/04.sun.cat.owl.GlobalUsings.g.cs
+/src/04.sun.cat.owl/obj/Debug/net7.0/04.sun.cat.owl.pdb
+/src/04.sun.cat.owl/obj/Debug/net7.0/apphost.exe
+/src/04.sun.cat.owl/obj/project.assets.json
+/src/04.sun.cat.owl/obj/project.nuget.cache
