--- a/.gitignore
+++ b/.gitignore
@@ -29481,3 +29481,65 @@ src/01-language/03-interfaces/01-implements/bin/Debug/net7.0/01.implements.pdb
 src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplements.explicit.dll
 src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplements.explicit.exe
 src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplements.explicit.pdb
+/src/.vs/01-language/DesignTimeBuild/.dtbcache.v2
+/src/.vs/01-language/v17/.futdcache.v2
+/src/.vs/01-language/v17/.suo
+/src/.vs/01-language/v17/TestStore/0/000.testlog
+/src/.vs/01-language/v17/TestStore/0/testlog.manifest
+/src/.vs/02-database-integration/DesignTimeBuild/.dtbcache.v2
+/src/.vs/02-database-integration/v17/.futdcache.v2
+/src/.vs/02-database-integration/v17/.suo
+/src/.vs/02-database-integration/v17/TestStore/0/000.testlog
+/src/.vs/02-database-integration/v17/TestStore/0/testlog.manifest
+/src/.vs/03-clean-architecture-ardalis/v17/.futdcache.v2
+/src/.vs/03-clean-architecture-ardalis/v17/.suo
+/src/.vs/03-clean-architecture-ardalis/v17/TestStore/0/000.testlog
+/src/.vs/03-clean-architecture-ardalis/v17/TestStore/0/testlog.manifest
+/src/.vs/ProjectEvaluation/01-language.metadata.v7.bin
+/src/.vs/ProjectEvaluation/01-language.projects.v7.bin
+/src/.vs/ProjectEvaluation/02-database-integration.metadata.v7.bin
+/src/.vs/ProjectEvaluation/02-database-integration.projects.v7.bin
+/src/.vs/ProjectEvaluation/dotnetsamples.metadata.v7.bin
+/src/.vs/ProjectEvaluation/dotnetsamples.projects.v7.bin
+/src/01-language/01-functions/03-ref-params/bin/Debug/net7.0/03.ref.params.dll
+/src/01-language/01-functions/03-ref-params/bin/Debug/net7.0/03.ref.params.exe
+/src/01-language/01-functions/03-ref-params/bin/Debug/net7.0/03.ref.params.pdb
+/src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/ref/03.ref.params.dll
+/src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/refint/03.ref.params.dll
+/src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.AssemblyInfo.cs
+/src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.AssemblyInfoInputs.cache
+/src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.csproj.CoreCompileInputs.cache
+/src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.dll
+/src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.pdb
+/src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/apphost.exe
+/src/01-language/01-functions/04-ref-params-class/bin/Debug/net7.0/04.ref.params.class.dll
+/src/01-language/01-functions/04-ref-params-class/bin/Debug/net7.0/04.ref.params.class.exe
+/src/01-language/01-functions/04-ref-params-class/bin/Debug/net7.0/04.ref.params.class.pdb
+/src/01-language/01-functions/05-out-params/bin/Debug/net7.0/05.out.params.dll
+/src/01-language/01-functions/05-out-params/bin/Debug/net7.0/05.out.params.exe
+/src/01-language/01-functions/05-out-params/bin/Debug/net7.0/05.out.params.pdb
+/src/01-language/01-functions/06-in-params/bin/Debug/net7.0/06.in.params.dll
+/src/01-language/01-functions/06-in-params/bin/Debug/net7.0/06.in.params.exe
+/src/01-language/01-functions/06-in-params/bin/Debug/net7.0/06.in.params.pdb
+/src/01-language/01-functions/07-extension-methods/bin/Debug/net7.0/07.extension.methods.dll
+/src/01-language/01-functions/07-extension-methods/bin/Debug/net7.0/07.extension.methods.exe
+/src/01-language/01-functions/07-extension-methods/bin/Debug/net7.0/07.extension.methods.pdb
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.AssemblyInfo.cs
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.AssemblyInfoInputs.cache
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.csproj.CoreCompileInputs.cache
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.dll
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.pdb
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/apphost.exe
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/ref/07.extension.methods.dll
+/src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/refint/07.extension.methods.dll
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.AssemblyInfo.cs
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.AssemblyInfoInputs.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.csproj.CoreCompileInputs.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.csproj.FileListAbsolute.txt
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.dll
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.genruntimeconfig.cache
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.pdb
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/01.inheritance.constructor.sourcelink.json
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/apphost.exe
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/ref/01.inheritance.constructor.dll
+/src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/refint/01.inheritance.constructor.dll
