--- a/.gitignore
+++ b/.gitignore
@@ -29543,3 +29543,6 @@ src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplemen
 /src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/apphost.exe
 /src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/ref/01.inheritance.constructor.dll
 /src/01-language/02-classes/00-inheritance-constructor/obj/Debug/net7.0/refint/01.inheritance.constructor.dll
+/src/01-language/02-classes/01-modifiers-public/bin/Debug/net7.0/00.modifiers.public.dll
+/src/01-language/02-classes/01-modifiers-public/bin/Debug/net7.0/00.modifiers.public.exe
+/src/01-language/02-classes/01-modifiers-public/bin/Debug/net7.0/00.modifiers.public.pdb
