premestio projekat u events

--- a/.gitignore
+++ b/.gitignore
@@ -29797,3 +29797,20 @@ src/03-clean-architecture-ardalis/01-from-template/tests/01-from-template.UnitTe
 src/03-clean-architecture-ardalis/01-from-template/tests/01-from-template.UnitTests/obj/Debug/net7.0/01-from-template.UnitTests.sourcelink.json
 src/03-clean-architecture-ardalis/01-from-template/tests/01-from-template.UnitTests/obj/project.assets.json
 src/03-clean-architecture-ardalis/01-from-template/tests/01-from-template.UnitTests/obj/project.nuget.cache
+src/01-language/01-functions/03-ref-params/bin/Debug/net7.0/03.ref.params.deps.json
+src/01-language/01-functions/03-ref-params/bin/Debug/net7.0/03.ref.params.runtimeconfig.json
+src/01-language/01-functions/03-ref-params/obj/Debug/net5.0/.NETCoreApp,Version=v5.0.AssemblyAttributes.cs
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/.NETCoreApp,Version=v7.0.AssemblyAttributes.cs
+src/01-language/01-functions/03-ref-params/obj/Debug/net7.0/03.ref.params.csproj.BuildWithSkipAnalyzers
+src/01-language/01-functions/03-ref-params/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+src/01-language/01-functions/03-ref-params/obj/Debug/netcoreapp3.1/04.ref.params.AssemblyInfo.cs
+src/01-language/01-functions/04-ref-params-class/bin/Debug/net7.0/04.ref.params.class.deps.json
+src/01-language/01-functions/04-ref-params-class/bin/Debug/net7.0/04.ref.params.class.runtimeconfig.json
+src/01-language/01-functions/05-out-params/bin/Debug/net7.0/05.out.params.deps.json
+src/01-language/01-functions/05-out-params/bin/Debug/net7.0/05.out.params.runtimeconfig.json
+src/01-language/01-functions/06-in-params/bin/Debug/net7.0/06.in.params.deps.json
+src/01-language/01-functions/06-in-params/bin/Debug/net7.0/06.in.params.runtimeconfig.json
+src/01-language/01-functions/07-extension-methods/bin/Debug/net7.0/07.extension.methods.deps.json
+src/01-language/01-functions/07-extension-methods/bin/Debug/net7.0/07.extension.methods.runtimeconfig.json
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/.NETCoreApp,Version=v7.0.AssemblyAttributes.cs
+src/01-language/01-functions/07-extension-methods/obj/Debug/net7.0/07.extension.methods.csproj.BuildWithSkipAnalyzers
