--- a/.gitignore
+++ b/.gitignore
@@ -29821,3 +29821,8 @@ obj
 /src/03-clean-architecture-ardalis/02-source-included/.vs/Project/v17/.suo
 /src/03-clean-architecture-ardalis/02-source-included/.vs/Project/v17/TestStore/0/000.testlog
 /src/03-clean-architecture-ardalis/02-source-included/.vs/Project/v17/TestStore/0/testlog.manifest
+src/03-clean-architecture-ardalis/02-source-included/.vs/02-source-included/v17/.suo
+src/03-clean-architecture-ardalis/02-source-included/.vs/Project/DesignTimeBuild/.dtbcache.v2
+src/03-clean-architecture-ardalis/02-source-included/.vs/Project/v17/.futdcache.v2
+src/03-clean-architecture-ardalis/02-source-included/.vs/ProjectEvaluation/project.metadata.v7.bin
+src/03-clean-architecture-ardalis/02-source-included/.vs/ProjectEvaluation/project.projects.v7.bin
