--- a/src/03-clean-architecture-ardalis/02-source-included/src/Project.Core/Project.Core.csproj
+++ b/src/03-clean-architecture-ardalis/02-source-included/src/Project.Core/Project.Core.csproj
@@ -9,12 +9,17 @@
   <ItemGroup>
     <PackageReference Include="Ardalis.GuardClauses" />
     <PackageReference Include="Ardalis.Result" />
-    <PackageReference Include="Ardalis.SharedKernel" />
     <PackageReference Include="Ardalis.SmartEnum" />
     <PackageReference Include="Ardalis.Specification" />
     <PackageReference Include="Autofac" />
     <PackageReference Include="MediatR" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\common\Ardalis.SharedKernel\src\Ardalis.SharedKernel\Ardalis.SharedKernel.csproj">
+      <Private></Private>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
