--- a/.gitignore
+++ b/.gitignore
@@ -29568,3 +29568,41 @@ src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplemen
 /src/04.sun.cat.owl/obj/Debug/net7.0/apphost.exe
 /src/04.sun.cat.owl/obj/project.assets.json
 /src/04.sun.cat.owl/obj/project.nuget.cache
+/src/01-language/10-structures/02-structures-methods-properties/bin/Debug/net7.0/02.structures.methods.properties.dll
+/src/01-language/10-structures/02-structures-methods-properties/bin/Debug/net7.0/02.structures.methods.properties.exe
+/src/01-language/10-structures/02-structures-methods-properties/bin/Debug/net7.0/02.structures.methods.properties.pdb
+/src/01-language/10-structures/03-structures-events/bin/Debug/net7.0/03.structures.events.dll
+/src/01-language/10-structures/03-structures-events/bin/Debug/net7.0/03.structures.events.exe
+/src/01-language/10-structures/03-structures-events/bin/Debug/net7.0/03.structures.events.pdb
+/src/01-language/11-lambdas/01-simple-lambda/bin/Debug/net7.0/01.simple.lambda.dll
+/src/01-language/11-lambdas/01-simple-lambda/bin/Debug/net7.0/01.simple.lambda.exe
+/src/01-language/11-lambdas/01-simple-lambda/bin/Debug/net7.0/01.simple.lambda.pdb
+/src/01-language/11-lambdas/03-expression-body-in-interface/bin/Debug/net7.0/03.lambda.expression.in.interface.dll
+/src/01-language/11-lambdas/03-expression-body-in-interface/bin/Debug/net7.0/03.lambda.expression.in.interface.exe
+/src/01-language/11-lambdas/03-expression-body-in-interface/bin/Debug/net7.0/03.lambda.expression.in.interface.pdb
+/src/01-language/11-lambdas/05-initialization-expression/bin/Debug/net7.0/05.initialization.expression.dll
+/src/01-language/11-lambdas/05-initialization-expression/bin/Debug/net7.0/05.initialization.expression.exe
+/src/01-language/11-lambdas/05-initialization-expression/bin/Debug/net7.0/05.initialization.expression.pdb
+/src/01-language/13-async-prog/01-breakfast-sync/bin/Debug/net7.0/01.breakfast.blocking.dll
+/src/01-language/13-async-prog/01-breakfast-sync/bin/Debug/net7.0/01.breakfast.blocking.exe
+/src/01-language/13-async-prog/01-breakfast-sync/bin/Debug/net7.0/01.breakfast.blocking.pdb
+/src/01-language/10-structures/01-simple-structure/bin/Debug/net7.0/01.simple.structure.exe
+/src/01-language/13-async-prog/02-brekfast-non-block-seq/bin/Debug/net7.0/02.breakfast.non.block.seq.dll
+/src/01-language/13-async-prog/02-brekfast-non-block-seq/bin/Debug/net7.0/02.breakfast.non.block.seq.exe
+/src/01-language/13-async-prog/02-brekfast-non-block-seq/bin/Debug/net7.0/02.breakfast.non.block.seq.pdb
+/src/01-language/13-async-prog/05-breakfast-tasks-whenall/bin/Debug/net7.0/05.breakfast.tasks.whenall.dll
+/src/01-language/13-async-prog/05-breakfast-tasks-whenall/bin/Debug/net7.0/05.breakfast.tasks.whenall.exe
+/src/01-language/13-async-prog/05-breakfast-tasks-whenall/bin/Debug/net7.0/05.breakfast.tasks.whenall.pdb
+/src/01-language/14-nullable/01-simple-nullable/bin/Debug/net7.0/01.nullable.simples.dll
+/src/01-language/14-nullable/01-simple-nullable/bin/Debug/net7.0/01.nullable.simples.exe
+/src/01-language/14-nullable/01-simple-nullable/bin/Debug/net7.0/01.nullable.simples.pdb
+/src/01-language/15-records/04-records-inheritance/bin/Debug/net7.0/04.records.inheritance.dll
+/src/01-language/15-records/04-records-inheritance/bin/Debug/net7.0/04.records.inheritance.exe
+/src/01-language/15-records/04-records-inheritance/bin/Debug/net7.0/04.records.inheritance.pdb
+/src/01-language/16-attributes/02-custom-attribute/bin/Debug/net7.0/02.custom.attribute.dll
+/src/01-language/16-attributes/02-custom-attribute/bin/Debug/net7.0/02.custom.attribute.exe
+/src/01-language/16-attributes/02-custom-attribute/bin/Debug/net7.0/02.custom.attribute.pdb
+/src/01-language/17-linq/01-simple-linq/bin/Debug/net7.0/01.simple.linq.dll
+/src/01-language/17-linq/01-simple-linq/bin/Debug/net7.0/01.simple.linq.exe
+/src/01-language/17-linq/01-simple-linq/bin/Debug/net7.0/01.simple.linq.pdb
+/src/01-language/17-linq/02-linq-samples/bin/Debug/net7.0/02.linq.samples.exe
