--- a/.gitignore
+++ b/.gitignore
@@ -29606,3 +29606,4 @@ src/01-language/03-interfaces/02-implements-explicit/bin/Debug/net7.0/02.iplemen
 /src/01-language/17-linq/01-simple-linq/bin/Debug/net7.0/01.simple.linq.exe
 /src/01-language/17-linq/01-simple-linq/bin/Debug/net7.0/01.simple.linq.pdb
 /src/01-language/17-linq/02-linq-samples/bin/Debug/net7.0/02.linq.samples.exe
+.vs/primeri-predavanja/v17/.wsuo
