--- a/src/03-clean-architecture-ardalis/02-source-included/src/common/Ardalis.SharedKernel/tests/Ardalis.SharedKernel.UnitTests/Ardalis.SharedKernel.UnitTests.csproj
+++ b/src/03-clean-architecture-ardalis/02-source-included/src/common/Ardalis.SharedKernel/tests/Ardalis.SharedKernel.UnitTests/Ardalis.SharedKernel.UnitTests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
