--- a/.gitignore
+++ b/.gitignore
@@ -30176,3 +30176,6 @@ src/03-clean-architecture-ardalis/01-from-template/tests/01-from-template.UnitTe
 /src/03-clean-architecture-ardalis/02-source-included/src/Project.Web/Project.Web.csproj.user
 /src/03-clean-architecture-ardalis/02-source-included/.vs/Project/config/applicationhost.config
 /src/03-clean-architecture-ardalis/02-source-included/tests/Project.FunctionalTests/bin/Debug/net7.0/log20241125.txt
+/src/02-database-interaction/.vs/02-database-integration/v17/.suo
+/src/02-database-interaction/.vs/02-database-integration/v17/TestStore/0/000.testlog
+/src/02-database-interaction/.vs/02-database-integration/v17/TestStore/0/testlog.manifest
