--- a/.gitignore
+++ b/.gitignore
@@ -30179,3 +30179,4 @@ src/03-clean-architecture-ardalis/01-from-template/tests/01-from-template.UnitTe
 /src/02-database-interaction/.vs/02-database-integration/v17/.suo
 /src/02-database-interaction/.vs/02-database-integration/v17/TestStore/0/000.testlog
 /src/02-database-interaction/.vs/02-database-integration/v17/TestStore/0/testlog.manifest
+/src/02-database-interaction/.vs/02-database-integration/DesignTimeBuild/.dtbcache.v2
