--- a/.gitignore
+++ b/.gitignore
@@ -30180,3 +30180,6 @@ src/03-clean-architecture-ardalis/01-from-template/tests/01-from-template.UnitTe
 /src/02-database-interaction/.vs/02-database-integration/v17/TestStore/0/000.testlog
 /src/02-database-interaction/.vs/02-database-integration/v17/TestStore/0/testlog.manifest
 /src/02-database-interaction/.vs/02-database-integration/DesignTimeBuild/.dtbcache.v2
+src/02-database-interaction/.vs/02-database-integration/v17/.futdcache.v2
+src/02-database-interaction/.vs/ProjectEvaluation/02-database-integration.metadata.v7.bin
+src/02-database-interaction/.vs/ProjectEvaluation/02-database-integration.projects.v7.bin
